--- a/package.json
+++ b/package.json
@@ -9,6 +9,9 @@
     "@types/express": "^4.17.21",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
+    "autoprefixer": "^10.4.20",
+    "postcss": "^8.4.47",
+    "tailwindcss": "^3.4.12",
     "vite": "^5.4.6"
   },
   "peerDependencies": {
