--- a/package.json
+++ b/package.json
@@ -18,8 +18,11 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.17.8",
+    "@types/three": "^0.168.0",
     "express": "^4.21.0",
     "react": "^18.3.1",
-    "react-dom": "^18.3.1"
+    "react-dom": "^18.3.1",
+    "three": "^0.168.0"
   }
 }
