--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "dependencies": {
     "@react-three/fiber": "^8.17.8",
     "@types/three": "^0.168.0",
+    "bootstrap-icons": "^1.11.3",
     "express": "^4.21.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
