--- a/package.json
+++ b/package.json
@@ -6,10 +6,10 @@
   },
   "devDependencies": {
     "@types/express": "^4.17.21",
+    "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.0",
-    "@vitejs/plugin-react-swc": "^3.7.0",
+    "@types/three": "^0.168.0",
     "autoprefixer": "^10.4.20",
-    "postcss": "^8.4.47",
     "tailwindcss": "^3.4.12",
     "vite": "^5.4.6"
   },
@@ -17,12 +17,11 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@react-three/fiber": "^8.17.8",
-    "@types/three": "^0.168.0",
     "bootstrap-icons": "^1.11.3",
     "express": "^4.21.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "three": "^0.168.0"
+    "three": "^0.168.0",
+    "@react-three/fiber": "^8.17.8"
   }
 }
