--- a/package.json
+++ b/package.json
@@ -2,10 +2,9 @@
   "name": "unravel",
   "type": "module",
   "scripts": {
-    "dev": "bun server.ts"
+    "dev": "deno server.ts"
   },
   "devDependencies": {
-    "@types/bun": "latest",
     "@types/express": "^4.17.21",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react-swc": "^3.7.0",
