--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "express": "^4.21.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "socket.io": "^4.8.1",
+    "socket.io-client": "^4.8.1",
     "three": "^0.168.0",
     "@react-three/fiber": "^8.17.8"
   }
