--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "dev": "deno run -A server.ts"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/react": "^18.3.12",
     "@types/react-dom": "^18.3.0",
@@ -18,6 +19,7 @@
   },
   "dependencies": {
     "bootstrap-icons": "^1.11.3",
+    "cors": "^2.8.5",
     "express": "^4.21.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
