--- a/compose.yaml
+++ b/compose.yaml
@@ -3,7 +3,7 @@ services:
     image: nginx
     container_name: unravel_nginx
     volumes:
-      - ./nginx/sublimeful.org.conf:/etc/nginx/conf.d/sublimeful.org.conf
+      - ./nginx/unravel.sublimeful.org.conf:/etc/nginx/conf.d/unravel.sublimeful.org.conf
     ports:
       - 80:80
       - 443:443
