--- a/nginx/unravel.sublimeful.org.conf
+++ b/nginx/unravel.sublimeful.org.conf
@@ -8,7 +8,11 @@ server {
   }
 
   location / {
-    proxy_pass http://unravel:5173;
+    root /var/www/html;
+  }
+
+  location /api/ {
+    proxy_pass http://unravel:5174;
   }
 
   location ~* \.io {
