--- a/compose.yaml
+++ b/compose.yaml
@@ -3,6 +3,7 @@ services:
     image: nginx
     container_name: unravel_nginx
     volumes:
+      - ./dist/:/usr/share/nginx/html/
       - ./nginx/unravel.sublimeful.org.conf:/etc/nginx/conf.d/unravel.sublimeful.org.conf
     ports:
       - 80:80
