--- a/nginx/unravel.sublimeful.org.conf
+++ b/nginx/unravel.sublimeful.org.conf
@@ -11,17 +11,19 @@ server {
     proxy_pass http://unravel:5173;
   }
 
-  location ~* \.io {
-    proxy_set_header X-Real-IP $remote_addr;
-    proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-    proxy_set_header Host $http_host;
-    proxy_set_header X-NginX-Proxy false;
-
-    proxy_pass http://unravel:5174;
-    proxy_redirect off;
+  location /vite-hmr {
+    proxy_pass http://unravel:24678;
 
     proxy_http_version 1.1;
     proxy_set_header Upgrade $http_upgrade;
-    proxy_set_header Connection "upgrade";
+    proxy_set_header Connection "Upgrade";
+  }
+
+  location /socket.io {
+    proxy_pass http://unravel:5174;
+
+    proxy_http_version 1.1;
+    proxy_set_header Upgrade $http_upgrade;
+    proxy_set_header Connection "Upgrade";
   }
 }
