--- a/package.json
+++ b/package.json
@@ -26,11 +26,13 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
     "firebase": "^11.0.2",
+    "firebase-admin": "^13.0.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
     "three": "^0.168.0",
-    "@react-three/fiber": "^8.17.8"
+    "@react-three/fiber": "^8.17.8",
+    "universal-cookie": "^7.2.2"
   }
 }
