--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "prod": "NODE_ENV=production deno run -A server.ts"
   },
   "devDependencies": {
+    "@types/cookie-parser": "^1.4.7",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "@types/node": "^22.9.0",
@@ -22,6 +23,7 @@
   "dependencies": {
     "@socket.io/admin-ui": "^0.5.1",
     "bootstrap-icons": "^1.11.3",
+    "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.0",
