--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "typescript": "^5.0.0"
   },
   "dependencies": {
+    "@datastructures-js/priority-queue": "^6.3.1",
     "@socket.io/admin-ui": "^0.5.1",
     "bootstrap-icons": "^1.11.3",
     "cookie-parser": "^1.4.7",
