--- a/package.json
+++ b/package.json
@@ -6,34 +6,38 @@
     "prod": "NODE_ENV=production deno run -A server.ts"
   },
   "devDependencies": {
-    "@types/cookie-parser": "^1.4.7",
-    "@types/cors": "^2.8.17",
-    "@types/express": "^4.17.21",
-    "@types/node": "^22.9.0",
-    "@types/react": "^18.3.12",
-    "@types/react-dom": "^18.3.0",
+    "@types/cookie-parser": "^1.4.9",
+    "@types/cors": "^2.8.19",
+    "@types/express": "^4.17.23",
+    "@types/node": "^22.16.5",
+    "@types/react": "^18.3.23",
+    "@types/react-dom": "^18.3.7",
     "@types/three": "^0.168.0",
-    "autoprefixer": "^10.4.20",
-    "tailwindcss": "^3.4.12",
-    "vite": "^5.4.6"
+    "autoprefixer": "^10.4.21",
+    "tailwindcss": "^3.4.17",
+    "vite": "^5.4.19"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@datastructures-js/priority-queue": "^6.3.1",
+    "@datastructures-js/priority-queue": "^6.3.3",
+    "@langchain/core": "^0.3.66",
+    "@langchain/google-genai": "^0.2.15",
     "@socket.io/admin-ui": "^0.5.1",
-    "bootstrap-icons": "^1.11.3",
+    "bootstrap-icons": "^1.13.1",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
-    "dotenv": "^16.4.5",
-    "express": "^4.21.0",
-    "firebase": "^11.0.2",
-    "firebase-admin": "^13.0.0",
+    "dotenv": "^16.6.1",
+    "express": "^4.21.2",
+    "firebase": "^11.10.0",
+    "firebase-admin": "^13.4.0",
+    "langchain": "^0.3.30",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "socket.io": "^4.8.1",
     "socket.io-client": "^4.8.1",
-    "universal-cookie": "^7.2.2"
+    "universal-cookie": "^7.2.2",
+    "zod": "^4.0.5"
   }
 }
